<resources>
    <string name="app_name">Trade_by_bata</string>
    <string name="bottom_navigation_menu_item_home_tittle">Home</string>
    <string name="bottom_navigation_menu_item_favourites_tittle">Favourites</string>
    <string name="bottom_navigation_menu_item_shopping_cart_tittle">Shopping cart</string>
    <string name="bottom_navigation_menu_item_comments_tittle">Comments</string>
    <string name="bottom_navigation_menu_item_profile_tittle">Profile</string>
    <string name="sign_in_hint_first_name_input">First name</string>
    <string name="sign_in_hint_last_name_input">Last name</string>
    <string name="sign_in_hint_email_inpul">Email</string>
    <string name="already_have_account_text">Already have an account?</string>
    <string name="sign_in_page_log_in_button_text">Log in</string>
    <string name="login_hint_password_input">Password</string>
    <string name="profile_menu_trade_store_text">Trade store</string>
    <string name="profile_menu_payment_method_text">Payment method</string>
    <string name="profile_menu_balance_text">Balance</string>
    <string name="profile_menu_trade_history_text">Trade history</string>
    <string name="profile_menu_restore_purchase_text">Restore Purchase</string>
    <string name="profile_menu_help_text">Help</string>
    <string name="profile_menu_log_out_text">Log out</string>
    <string name="profile_toolbar_title_text">Profile</string>
    <string name="location_button_text">Location</string>
    <string name="home_search_hint_text">What are you looking for ?</string>
    <string name="home_categories_phones_title">Phones</string>
    <string name="home_categories_headphones_title">Headphones</string>
    <string name="home_categories_games_title">Games</string>
    <string name="home_categories_cars_title">Cars</string>
    <string name="home_categories_furniture_title">Furniture</string>
    <string name="home_categories_kids_title">Kids</string>
    <string name="home_latest_collection_title">Latest</string>
    <string name="home_latest_view_all_button_text">View all</string>
    <string name="home_flash_sale_collection_title">Flash sale</string>
    <string name="home_flash_sale_view_all_button_text">View all</string>
    <string name="home_brands_collection_title">Brands</string>
    <string name="home_brands_view_all_button_text">View all</string>
    <string name="good_details_colors_title">Colors:</string>
    <string name="good_details_quantity_title">Quantity</string>
    <string name="good_details_quantity_add_to_cart_button_title">ADD TO CART</string>
</resources>